@@ -2,3 +2,10 @@
 - First major commit, via the correct methods
 - Removed old files that were no longer relevant
 - Committed Main and Run-AIP.sh, but not Eval and Total_Eval.sh because both still contain personal identifiers
+
+24/04/2020
+- Separated eval module into another repo
+- Separated eval script and run AIP script
+- Worked on organization
+- Deleted unecessary functions in AIP.py
+- Removed old module files
